--- a/backend/package.json
+++ b/backend/package.json
@@ -3,22 +3,21 @@
   "version": "1.0.0",
   "description": "Serverless TODO image app",
   "dependencies": {
-    "@types/axios": "^0.14.0",
     "@types/http-errors": "^1.6.1",
-    "aws-xray-sdk": "^2.2.0",
-    "axios": "^0.19.0",
+    "aws-xray-sdk": "^3.2.0",
+    "axios": "^0.21.1",
     "http-errors": "^1.7.2",
     "jsonwebtoken": "^8.5.1",
-    "middy": "^0.27.0",
+    "middy": "^0.36.0",
     "source-map-support": "^0.5.11",
-    "uuid": "^3.3.2",
-    "winston": "^3.2.1"
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@types/aws-lambda": "^8.10.17",
+    "@serverless/typescript": "^2.12.0",
+    "@types/aws-lambda": "^8.10.64",
     "@types/jsonwebtoken": "^8.3.2",
-    "@types/node": "^10.14.4",
-    "aws-sdk": "^2.433.0",
+    "@types/node": "^14.14.20",
+    "aws-sdk": "^2.820.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-iam-roles-per-function": "^1.0.4",
     "serverless-plugin-canary-deployments": "^0.4.7",
@@ -28,6 +27,6 @@
     "typescript": "^3.4.1",
     "webpack": "^4.29.6"
   },
-  "author": "Ivan Mushketyk",
+  "author": "Lars Kinder",
   "license": "MIT"
 }
