Added getTodos functionality and added authorizer to function

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -49,7 +49,10 @@ functions:
     events:
       - http:
           method: get
+          authorizer: Auth
           path: todos
+
+
 
 #  # TODO: Configure this function
 #  GetTodos:
