--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -27,6 +27,7 @@ provider:
         - dynamodb:Query
         - dynamodb:PutItem
         - dynamodb:GetItem
+        - dynamodb:DeleteItem
       Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.TODOS_TABLE}
     - Effect: Allow
       Action:
@@ -71,14 +72,17 @@ functions:
 #          method: patch
 #          path: todos/{todoId}
 #
-#  # TODO: Configure this function
-#  DeleteTodo:
-#    handler: src/lambda/http/deleteTodo.handler
-#    events:
-#      - http:
-#          method: delete
-#          path: todos/{todoId}
-#
+
+  # TODO: Configure this function
+  DeleteTodo:
+    handler: src/lambda/http/deleteTodo.handler
+    events:
+      - http:
+          method: delete
+          authorizer: Auth
+          path: todos/{todoId}
+          cors: true
+
 #  # TODO: Configure this function
 #  GenerateUploadUrl:
 #    handler: src/lambda/http/generateUploadUrl.handler
